// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/organisms/MapCanvas.vue snapshot can write and select nodes 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex="1"
  >
    <!---->
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
        
      <svgconnectorcontainer-stub
        connectors="[object Object]"
      />
       
      <svgnodecontainer-stub
        canwrite="true"
        closednodefamilycounts="[object Object]"
        commentcounts="[object Object]"
        editdependencytarget=""
        editingtext=""
        movingnodefamilykeylist=""
        nodepositions="[object Object]"
        nodes="[object Object]"
        selectednodes="[object Object]"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <div
    class="history-tool"
  >
    <historytoolbox-stub />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot full data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <v-icon-stub
      class="lock-button"
    >
      lock
    </v-icon-stub>
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
        
      <svgconnectorcontainer-stub
        connectors="[object Object]"
      />
       
      <svgnodecontainer-stub
        closednodefamilycounts="[object Object]"
        commentcounts="[object Object]"
        editdependencytarget=""
        editingtext=""
        movingnodefamilykeylist=""
        nodepositions="[object Object]"
        nodes="[object Object]"
        selectednodes="[object Object]"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;

exports[`components/organisms/MapCanvas.vue snapshot no data 1`] = `
<div
  class="map-canvas-wrapper"
  hegith="200"
>
  <div
    class="canvas-wrapper"
    tabindex=""
  >
    <v-icon-stub
      class="lock-button"
    >
      lock
    </v-icon-stub>
     
    <svgcanvas-stub
      height="400"
      scale="1"
      width="100"
      x="0"
      y="0"
    >
        
      <svgconnectorcontainer-stub
        connectors="[object Object]"
      />
       
      <svgnodecontainer-stub
        closednodefamilycounts="[object Object]"
        commentcounts="[object Object]"
        editdependencytarget=""
        editingtext=""
        movingnodefamilykeylist=""
        nodepositions="[object Object]"
        nodes="[object Object]"
        selectednodes="[object Object]"
      />
       
      <!---->
       
    </svgcanvas-stub>
  </div>
   
  <div
    class="scale-tool"
  >
    <scaletoolbox-stub
      max="15"
      min="-17.545081794683426"
      scalerate="0"
      step="0.1"
    />
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <commentlist-stub
    class="comment-list"
    comments="[object Object]"
    style="display: none;"
    user="[object Object]"
    users="[object Object]"
  />
   
  <v-snackbar-stub
    bottom="true"
    right="true"
    timeout="2000"
  >
    
    One more click to delete.
  
  </v-snackbar-stub>
</div>
`;
